--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ button.add-row{background:#fff;color:var(--brand);border:1px dashed #d7cabc}
     <div class="grid cols-3">
       <div><label>Company Name</label><input id="inpCompany" type="text" value="Onetwentysix Verse CO., LTD"></div>
       <div><label>Tagline</label><input id="inpTagline" type="text" value="Brand &amp; Marketing Solutions"></div>
-      <div><label>Tax Code</label><input id="inpTaxCode" type="text" value="0318489706"></div>
+      <div><label>Tax Code</label><input id="inpTaxCode" type="text" value="1212879"></div>
     </div>
     <div style="margin-top:12px">
         <label>Logo (optional)</label><input id="inpLogo" type="file" accept="image/*"><div class="small">If empty, default logo path will be used.</div>
@@ -292,7 +292,7 @@ button.add-row{background:#fff;color:var(--brand);border:1px dashed #d7cabc}
       <div><label>Note (footer line 1)</label><input id="inpNote1" type="text" value="Thank you for choosing Onetwentysix Verse as your creative partner."></div>
       <div><label>Wish (footer line 2)</label><input id="inpNote2" type="text" value="We wish you continued success and growth — let’s build something remarkable together!"></div>
       
-      <div><label>Tên Người Ký</label><input id="inpSignName" type="text" value="Felix-Thinh Phan"></div>
+      <div><label>Tên Người Ký</label><input id="inpSignName" type="text" value="Phan Ngọc Thịnh"></div>
       <div><label>Chức Danh Người Ký</label><input id="inpSignTitle" type="text" value="Creative Director"></div>
     </div>
 
@@ -398,7 +398,7 @@ button.add-row{background:#fff;color:var(--brand);border:1px dashed #d7cabc}
 
   <section class="summary">
     <p>Subtotal <span id="subtotal">$0.00</span></p>
-    <p>Tax <span id="tax">$0.00</span></p>
+    <p><span id="taxLabel">Tax</span> <span id="tax">$0.00</span></p>
     <p class="total">Total <span id="grand">$0.00</span></p>
   </section>
 
@@ -889,6 +889,13 @@ function recalc(){
     tbody.appendChild(tr);
   });
   const vat=parseNum(document.getElementById('inpVAT').value);
+  
+  // Update tax label with percentage
+  const taxLabelEl = document.getElementById('taxLabel');
+  if (taxLabelEl) {
+    taxLabelEl.textContent = `Tax (${vat}%)`;
+  }
+
   const tax=subtotal*(vat/100); const grand=subtotal+tax;
   document.getElementById('subtotal').textContent=formatMoney(subtotal,cur);
   document.getElementById('tax').textContent=formatMoney(tax,cur);
