--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ button.add-row{background:#fff;color:var(--brand);border:1px dashed #d7cabc}
     <div class="grid cols-3">
       <div><label>Company Name</label><input id="inpCompany" type="text" value="Onetwentysix Verse CO., LTD"></div>
       <div><label>Tagline</label><input id="inpTagline" type="text" value="Brand &amp; Marketing Solutions"></div>
-      <div><label>Tax Code</label><input id="inpTaxCode" type="text" value="1212879"></div>
+      <div><label>Tax Code</label><input id="inpTaxCode" type="text" value="0318489706"></div>
     </div>
     <div style="margin-top:12px">
         <label>Logo (optional)</label><input id="inpLogo" type="file" accept="image/*"><div class="small">If empty, default logo path will be used.</div>
@@ -292,7 +292,7 @@ button.add-row{background:#fff;color:var(--brand);border:1px dashed #d7cabc}
       <div><label>Note (footer line 1)</label><input id="inpNote1" type="text" value="Thank you for choosing Onetwentysix Verse as your creative partner."></div>
       <div><label>Wish (footer line 2)</label><input id="inpNote2" type="text" value="We wish you continued success and growth — let’s build something remarkable together!"></div>
       
-      <div><label>Tên Người Ký</label><input id="inpSignName" type="text" value="Phan Ngọc Thịnh"></div>
+      <div><label>Tên Người Ký</label><input id="inpSignName" type="text" value="Felix - Thinh Phan"></div>
       <div><label>Chức Danh Người Ký</label><input id="inpSignTitle" type="text" value="Creative Director"></div>
     </div>
 
